# NeMo-Skills

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  allout.txt  index.html  mkdocs.yml  out.txt  pyproject.toml  pytest-coverage.txt  requirements.txt  setup.py  sitemap.xml  skills.reqs
benchmark_generation/: answer_2_question.py  book_2_bench.py  extract_mismatch.py  formatted_problems-random.txt  formatted_problems-uniform.txt  formatted_problems.txt  generation_random_check.py  model_2_clear.py  process_answers.py
cluster_configs/: cw.yaml  draco-ord.yaml  example-local.yaml  example-slurm.yaml  local-vllm.yaml  local.yaml  slurm.yaml
dataset_explorer_demo/: README.md  visualize_similar.py
datasets/: add_rounding_instructions.py  prepare.py  prepare_all.sh  requirements.txt  utils.py
dockerfiles/: Dockerfile.nemo  Dockerfile.nemo-skills  Dockerfile.sandbox  Dockerfile.tensorrt_llm  Dockerfile.vllm  nemo.patch
docs/: checkpoint-conversion.md  common-parameters.md  decontamination.md  evaluation.md  finetuning.md  generation-parameters.md  generation.md  index.md  inference.md  llm-as-a-judge.md  prerequisites.md  prompt-format.md  reproducing-results.md  sandbox.md  synthetic-data-generation.md  training.md
nemo_inspector/: Readme.md  nemo_inspector.py
nemo_skills/: __init__.py  utils.py
openmathinstruct2/: index.html
pipeline/: check_batch_gen.py  compute_metrics.py  launcher.py  prepare_eval.py  proof_pipeline.py  run_code_eval.py  run_eval.py  run_labeling.py  run_pipeline.py  run_sft.py  run_sft_and_eval.py  (+3 more)
(+588 files in other folders)
